- Added player object - Added android object - Added dating game

--- a/index.html
+++ b/index.html
@@ -6,21 +6,7 @@
 	<title>Android Robot</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-	<div class="robot">
-		<div class="head">
-			<div class="eyes"></div>
-			<div class="eyes"></div>
-		</div>
-		<div class="body">
-			<div class="left hand"></div>
-			<div class="stomach"></div>
-			<div class="right hand"></div>
-		</div>
-		<div class="foot">
-			<div class="left leg"></div>
-			<div class="right leg"></div>
-		</div>
-	</div>
+<body class="container">
+	<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
